fix(card): update subtitle colour for better contrast

--- a/packages/osc-ui/src/components/Card/card.scss
+++ b/packages/osc-ui/src/components/Card/card.scss
@@ -100,7 +100,7 @@ $card-fs-3xl: $fs-3xl;
     }
 
     &__subttl {
-        color: var(--color-neutral-600);
+        color: var(--color-neutral-700);
         font-size: var(--font-scale-base);
         grid-row: 1;
 
